# transformerXL_PPO_JAX

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  rel_multi_head.py  requirements.txt  train_PPO_trXL.py  train_PPO_trXL_pmap.py  train_craftax_PPO_trXL.py  train_craftax_PPO_trXL_pmap.py  trainer_PPO_trXL.py  trainer_PPO_trXL_pmap.py  transformerXL.py  wrappers.py
results/base_A100_1e9/: 2_metrics.npy  3_metrics.npy  4_metrics.npy
results/pmap2V100_1e9steps_memory128_layer2_gamma999/: 0_config.npy  0_metrics.npy  1_metrics.npy
results_craftax/base_A100_1e9/: 0_metrics.npy  1_metrics.npy  3_config.npy
results_craftax/pmap2V100_1e9steps_memory128_layer2_gamma999/: 2_metrics.npy  3_metrics.npy  4_metrics.npy
results_gymnax/CartPole-v1__RELSHIFT_pmap1V100_1e7steps_memory128_layer2_gamma99_ent002/: 0_config.npy  0_metrics.npy  1_metrics.npy
results_gymnax/DeepSea-bsuite__RELSHIFT_pmap1V100_1e7steps_memory128_layer2_gamma99_ent002/: 0_config.npy  0_metrics.npy  1_metrics.npy
results_gymnax/GaussianBandit-misc__RELSHIFT_pmap1V100_1e7steps_memory128_layer2_gamma99_ent002/: 0_metrics.npy  1_config.npy  1_metrics.npy
results_gymnax/MemoryChain-bsuite__RELSHIFT_pmap1V100_1e7steps_memory128_layer2_gamma99_ent002/: 0_config.npy  0_metrics.npy  1_metrics.npy
results_gymnax/MetaMaze-miscNOGATING__RELSHIFT_pmap1V100_1e8steps_memory128_layer2_gamma9_ent004/: 0_config.npy  0_metrics.npy  1_metrics.npy
tests/: conftest.py  test_setup_validation.py
